--- a/src/index.html
+++ b/src/index.html
@@ -1,44 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>
-      Emailer Step Functions
-    </title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <title>SteveOGallagher.com</title>
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
     <link rel="stylesheet" href="/style.css">
   </head>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
   <body>
 
     <header class="text-center">
-      <h1 class="configure-email">Configure Email</h1>
-      <h1 class="tech-qa">Tech QA</h1>
+      <img class="profile-img" src="/images/steve_profile.jpg" alt="Steve O'Gallagher">
+      <h1>Steve O'Gallagher</h1>
     </header>
 
-    <div class="main configure-email">    
-      <form>
-        <div class="form-adjustment">
-          <h3>Campaign Title:</h3>
-          <input type="text" name="firstname"><br>
-          <h3>Email Intro Text:</h3>
-          <input type="text" name="intro"><br>
-        </div>
-      </form>
-      <button type="button" class="button-generate-email">Generate Email</button>
-    </div>
-
-    <div class="main tech-qa">    
-      <form>
-        <div class="form-adjustment-preview">
-          <h3 class="campaign-title">New Product!</h3>
-          <h3 class="campaign-intro">Buy now!</h3>
-        </div>
-      </form>
-      <button type="button" class="button-reject-tech">Reject</button>
-      <button type="button" class="button-approve-tech">Approve</button>
-    </div>
-
+    <div id="app"></div>
+    
   </body>
 </html>
